# Nexus

./: .env.sample  .gitignore  .pre-commit-config.yaml  Docker.api  Dockerfile  Dockerfile.api  Dockerfile.celery  Makefile  compose.prod.yaml  compose.yaml  docker-compose.ci.yml  docker.mk  main.py  nginx.conf  pyproject.toml  schema.yml
.github/workflows/: django-ci.yml
apps/core/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_remove_user_core_user_email_index_and_more.py  0003_alter_user_options.py  0004_location.py  0005_user_is_verified.py
apps/events/: admin.py  models.py  serializers.py  services.py  tests.py  tests_serializers.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_alter_eventteam_status.py  0003_lunchoption_registrationlunchorder.py  0004_alter_eventteam_event_alter_eventteam_team.py  0005_lunchoption_price.py  0006_alter_eventteammember_event_team.py  0007_matchtemplate_eventmatchconfiguration.py  0008_alter_eventmatchconfiguration_table_and_more.py  0009_eventmatchtemplateitem_and_more.py  0010_eventmatchconfiguration_count_points_by_sets_and_more.py  0011_alter_eventmatchconfiguration_rule_config.py  0012_remove_eventmatchconfiguration_rule_config.py
apps/matches/: admin.py  models.py  rules.py  serializers.py  services.py  tests.py  tests_api.py  urls.py  views.py
apps/matches/migrations/: 0001_initial.py  0002_alter_playermatchparticipant_options_and_more.py  0003_alter_matchtemplate_options.py  0004_remove_eventmatchconfiguration_event_and_more.py
apps/teams/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/teams/migrations/: 0001_initial.py
apps/users/: apps.py  authentication.py  exceptions.py  models.py  permissions.py  schema.py  serializers.py  services.py  tasks.py  throttles.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_auto_20251224_1556.py  0003_scocialaccount.py  0004_alter_scocialaccount_social_id_and_more.py  0005_alter_scocialaccount_social_type_and_more.py
apps/users/services/: __init__.py  services.py  social_services.py
config/: __init__.py  celery.py  settings.py  urls.py
docs/diagram/src/: db.wsd
test-tools/: Makefile  README  index.html  package.json
test-tools/src/: main.js  style.css
(+5 files in other folders)
