[project]
name = "nexus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.2",
    "django>=5.2.8",
    "django-redis>=6.0.0",
    "django-stubs>=5.2.8",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt[crypto]>=5.5.1",
    "djangorestframework-stubs>=3.16.6",
    "dotenv>=0.9.9",
    "drf-nested-routers>=0.95.0",
    "drf-spectacular>=0.29.0",
    "flake8-django>=1.4",
    "mailtrap>=2.4.0",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.3.1",
    "redis>=6.4.0",
    "uuid6>=2025.0.1",
]


[tool.ruff]
line-length = 100
exclude = [
    "tests/*",
    "docs/*",
    ".venv/*",
    "settings.py",
    "*/migrations/*",
    "*/__pycache__/*",
    ".git",
    "asgi.py",
    "settings.py",
    "wsgi.py",
    "manage.py",
]

[tool.ruff.lint]
select = [
    "E",  # Pycodestyle 錯誤類型
    "F",  # Pyflakes 的程序檢查
    "W",  # 警告
    "C",  # 複雜度與風格
    "Q",  # 雜七雜八的錯誤檢查
    "B",  # Bug 總類檢查 (bandit-like)
    "I",  # import 排序檢查 (isort 兼容)
    "DJ", # DJANGO
]
ignore = [
    "E203",  # 與 black 格式化衝突
]

extend-ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]


[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
